# LINEMOD_ROS

./: CMakeLists.txt  package.xml
conf/: depth_PS1080_PrimeSense.yaml  detection.ork  detection.ros.ork  rgb_PS1080_PrimeSense.yaml  training.ork
data/: JIG_CENTER.ply  JIG_CENTER.stl
src/: CMakeLists.txt  ModelFiller.cpp  PCL_ICP.cpp  PCL_ICP.h  linemod_detect.cpp  linemod_icp.cpp  linemod_train.cpp
